--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -547,40 +547,41 @@ hr.highlight {
     margin-bottom: 20px;
   }
 }
-@media (max-width: 992px) {
+@media (max-width: 1250px) {
   .video-text h1 {
-    font-size: 40px;
-    margin-bottom: 20%;
-    margin-top: 0;
+    font-size: 44px;
+    margin-bottom: 10%;
+    margin-top: -50px;
   }
 }
-@media (max-width: 480px) {
+/* @media (max-width: 480px) {
   .video-text h1 {
     font-size: 26px;
     margin-bottom: 10%;
     margin-top: 0px;
   }
-}
-@media (min-width: 992px) {
+} */
+@media (min-width: 1250px) {
   .video-text h1 {
     font-size: 58px;
-    margin-bottom: 40%;
-    margin-top: -50px;
+    margin-bottom: 20%;
+    margin-top: -150px;
   }
 }
-@media (max-width: 992px) {
-  .video-text .h2 {
-    font-size: 22px;
+@media (max-width: 1150px) {
+  .video-text .h3 {
+    font-size: 18px !important;
+    font-weight: bolder;
   }
 }
-@media (max-width: 480px) {
+/* @media (max-width: 480px) {
   .video-text .h2 {
     font-size: 12px;
   }
-}
-@media (min-width: 992px) {
-  .video-text .h2 {
-    font-size: 28px;
+} */
+@media (min-width: 1150px) {
+  .video-text .h3 {
+    font-size: 25px;
   }
 }
 .cta-btn .h2 {
@@ -596,16 +597,22 @@ hr.highlight {
   color: #1fa7d6 !important;
   border-color: #1fa7d6;
 }
-@media (min-width: 480px) {
+/* @media (min-width: 480px) {
   .cta-btn .h2 {
     margin: 5px 0 0 0;
     font-weight: 400;
   }
-}
+} */
 @media (min-width: 992px) {
   .cta-btn .h2 {
     font-size: 32px;
     padding: 10px 16px;
+  }
+}
+@media (max-width: 992px) {
+  .cta-btn .h2 {
+    font-size: 20px;
+    padding: 8px 14px;
   }
 }
 @media (min-width: 768px) {
@@ -12538,4 +12545,5 @@ RESPONSIVE
 .item-swatch { list-style: none; padding: 0; margin: 0; line-height: 0; }
 .item-swatch li { display: inline-block; margin: 0 2px; }
 .item-swatch li label { cursor:pointer; margin: 0; width: 15px; height: 15px; -webkit-border-radius: 100%; -moz-border-radius: 100%; border-radius: 100%; }
+
 
