--- a/snippets/sold-out.liquid
+++ b/snippets/sold-out.liquid
@@ -24,8 +24,8 @@
        <input type="hidden" name="contact[tags]" value="prospect,password page"/>
        {% else %}
        <input type="hidden" name="contact[tags]" value="prospect,newsletter"/>
-       <input type="hidden" name="contact[first_name]" value="{{ 'general.newsletter_form.subscriber_first_name' | t }}" />
-       <input type="hidden" name="contact[last_name]" value="{{ 'general.newsletter_form.subscriber_last_name' | t }}" />
+       <input type="hidden" name="contact[first_name]" value="first_name" />
+       <input type="hidden" name="contact[last_name]" value="last_name" />
        {% endif %}
        <input type="email" class="sold-out-form contact_email" name="contact[email]" required pattern="[^@]+@[^@]+\.[a-zA-Z]{2,6}" placeholder="Email me when available..." />
 
